<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--ROW-->
    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/toggleOff"
            android:textOn="@string/toggleOn" />

    </LinearLayout>

    <!--ROW -->
    <LinearLayout
        android:id="@+id/spinnerRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sizePrompt"

            />

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/size"></Spinner>

        <Switch
            android:id="@+id/gf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/gf" />

    </LinearLayout>
    <!--ROW-->
    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerRow"
        android:layout_marginTop="29dp">

        <CheckBox
            android:id="@+id/checkBox0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pepperoni" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="62dp"
            android:layout_marginRight="62dp"
            android:layout_weight="1"
            android:text="@string/mushrooms" />
    </LinearLayout>

    <!--ROW-->
    <LinearLayout
        android:id="@+id/LL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LL2">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/onions" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="62dp"
            android:layout_marginRight="62dp"
            android:layout_weight="1"
            android:text="@string/sausage" />
    </LinearLayout>
    <!--ROW-->
    <LinearLayout
        android:id="@+id/LL4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LL3"
        android:weightSum="1">

        <TextView
            android:id="@+id/crustLabel"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:text="@string/crust"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <RadioGroup
            android:id="@+id/crustgroup"
            android:layout_width="79dp"
            android:layout_height="match_parent">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deepDish" />

        </RadioGroup>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thin"
            android:layout_weight="0.17" />

    </LinearLayout>


    <!--ROW -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="59dp"
        android:layout_weight="1"
        android:text="" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:onClick="buildPizza"
        android:text="@string/pizza"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/productText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:layout_marginTop="23dp"
        android:text="PRODUCT"
        android:textAlignment="center" />


    <Button
        android:id="@+id/links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/productText"
        android:layout_alignRight="@id/productText"
        android:layout_below="@id/productText"
        android:layout_marginTop="20dp"
        android:text="@string/links" />

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/links"
        android:layout_below="@id/links"
        android:paddingTop="20dp"
        android:text="@string/blank" />

</RelativeLayout>
